fix code block overflow

--- a/_static/Hacks.css
+++ b/_static/Hacks.css
@@ -35,10 +35,17 @@ span.mdl-layout-title a.title {
     
     padding: 20px 0 20px 0;
 }
+/*---------------------- Page content -----------------------------*/
 
+/* Page content always responsive to the screen size*/
 div.page-content {
 
 	box-sizing: border-box;
+}
+
+div.page-content pre {
+    
+    white-space: pre;
 }
 
 /*Images size like paragraphs*/
@@ -48,6 +55,8 @@ div.page-content div.section img {
     max-width: 100%;
 
 }
+
+/*---------------------- Sphinx Directives -----------------------------*/
 
 /*Color any Topic block */
 .topic {
